# ELLang

./: .gitignore  README.md  pyproject.toml
docs/: LOCAL_MODELS.md  MANUAL.md  QUICKSTART.md
examples/: Substring.ell  minStack.ell  select_top_students.ell  sort_students.ell  stack.json  students.json  substring_input.json  three_sum_input.json
native/: README.md
native/runtime-rs/: Cargo.toml
native/runtime-rs/src/: bytecode.rs  capabilities.rs  ffi.rs  jit.rs  lib.rs  main.rs  quotas.rs  vm.rs
src/ellang/: __init__.py  algorithm_families.py  backend_prototypes.py  bytecode.py  cache.py  cli.py  compiler.py  debugging.py  ideate.py  ideation.py  ir.py  memory.py  optimizer.py  output.py  problem_spec.py  project.py  replay.py  runtime.py  security.py  syntax.py  testing.py  tracing.py  typed_ir.py  verifier.py  visualization.py  vm.py
src/ellang/models/: __init__.py  backend.py
tests/: test_core.py
